--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elsewhereprojectversion-3",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3000",
+  "proxy": "https://elsewhereproject-backend.herokuapp.com",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
